@@ -1364,6 +1364,7 @@ a:hover .nav-title,
 .main-navigation {
 	clear: both;
 	display: block;
+	background: #eace2f;
 }
 
 .main-navigation ul {
@@ -1684,6 +1685,23 @@ body:not(.title-tagline-hidden) .site-branding-text {
   justify-content: center;
   color: black;
 }
+
+
+.site-branding::after {
+  position: absolute;
+  left: 260px;
+  bottom: -18px;
+  background: url('./assets/images/60x100_paladin.png') no-repeat;
+  /* border: 1px solid black; */
+
+  content: '';
+  width: 60px;
+  height: 100px;
+	/* border: 1px solid black; */
+
+	z-index: 5;
+}
+
 .site-branding .site-title {
 
 	background-image: linear-gradient(-15deg, #eca813, #eca813, #ffff99);
@@ -3557,7 +3575,7 @@ p > object:only-child {
 		position: absolute;
 		right: 0;
 		width: 100%;
-		z-index: 3;
+		z-index: 1;
 	}
 
 	.navigation-top .wrap {
